--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,11 @@
 [tox]
-minversion = 1.6
-envlist = py27,py37,pep8
+minversion = 3.1.1
+envlist = py37,py36,pep8
 skipsdist = True
+ignore_basepython_conflict = True
 
 [testenv]
+basepython = python3
 setenv = VIRTUAL_ENV={envdir}
 usedevelop = True
 deps =
@@ -14,23 +16,19 @@ passenv = OS_TEST_*
 commands = stestr run --slowest {posargs}
 
 [testenv:docs]
-basepython = python3
 deps = -r{toxinidir}/doc/requirements.txt
 commands = sphinx-build -W -b html doc/source doc/build/html
 
 [testenv:releasenotes]
-basepython = python3
 deps = -r{toxinidir}/doc/requirements.txt
 commands = sphinx-build -a -E -W -d releasenotes/build/.doctrees -b html releasenotes/source releasenotes/build/html
 
 [testenv:pep8]
-basepython = python3
 commands =
   flake8 {posargs}
   doc8 {posargs}
 
 [testenv:cover]
-basepython = python3
 setenv =
     PYTHON=coverage run --source glance_store --parallel-mode
 commands =
@@ -40,7 +38,6 @@ commands =
     coverage xml -o cover/coverage.xml
 
 [testenv:venv]
-basepython = python3
 commands = {posargs}
 
 # See glance_store/tests/functional/README.rst for information on writing or
@@ -66,7 +63,6 @@ ignore = H301,H404,H405
 exclude = .venv,.git,.tox,dist,doc,etc,*glance_store/locale*,*lib/python*,*egg,build
 
 [testenv:lower-constraints]
-basepython = python3
 deps =
   -c{toxinidir}/lower-constraints.txt
   -r{toxinidir}/test-requirements.txt
