Add S3 store support to glance_store
Revive the S3 driver that was supported up to Mitaka and add multiple
store support to correspond with the features added to glance_store from
Newton to U cycle. In addition, the use of the S3 SDK used by the Mitaka
S3 driver has been deprecated, so this implementation will be changed
to use the new version.

Change-Id: I203134837319080ead96da69048baf90086d2117
Implements: blueprint re-support-s3-driver

--- a/setup.cfg
+++ b/setup.cfg
@@ -30,6 +30,7 @@ glance_store.drivers =
     rbd = glance_store._drivers.rbd:Store
     cinder = glance_store._drivers.cinder:Store
     vmware = glance_store._drivers.vmware_datastore:Store
+    s3 = glance_store._drivers.s3:Store
 
     # TESTS ONLY
     no_conf = glance_store.tests.fakes:UnconfigurableStore
@@ -41,6 +42,7 @@ glance_store.drivers =
     glance.store.rbd.Store = glance_store._drivers.rbd:Store
     glance.store.cinder.Store = glance_store._drivers.cinder:Store
     glance.store.vmware_datastore.Store = glance_store._drivers.vmware_datastore:Store
+    glance.store.s3.Store = glance_store._drivers.s3:Store
 
 oslo.config.opts =
     glance.store = glance_store.backend:_list_opts
@@ -61,6 +63,8 @@ cinder =
   os-brick>=2.2.0 # Apache-2.0
   oslo.rootwrap>=5.8.0 # Apache-2.0
   oslo.privsep>=1.23.0 # Apache-2.0
+s3 =
+  boto3>=1.9.199 # Apache-2.0
 
 [compile_catalog]
 directory = glance_store/locale
