--- a/tox.ini
+++ b/tox.ini
@@ -66,4 +66,4 @@ exclude = .venv,.git,.tox,dist,doc,etc,*glance_store/locale*,*lib/python*,*egg,b
 deps =
   -c{toxinidir}/lower-constraints.txt
   -r{toxinidir}/test-requirements.txt
-  .[vmware,swift,cinder]
+  .[s3,vmware,swift,cinder]
