Update hacking for Python3
The repo is Python 3 now, so update hacking to version 3.0 which
supports Python 3.

Fix problems found.

Remove hacking and friends from lower-constraints, they are not needed
for installation.

Change-Id: I99b8b24f714858f6b289e5e7b5976e519bb81c11

--- a/tox.ini
+++ b/tox.ini
@@ -59,7 +59,9 @@ ignore-path = .venv,.git,.tox,*glance_store/locale*,*lib/python*,glance_store.eg
 # H301  one import per line
 # H404  multi line docstring should start with a summary
 # H405  multi line docstring summary not separated with an empty line
-ignore = H301,H404,H405
+# W503 line break before binary operator
+# W504 line break after binary operator
+ignore = H301,H404,H405,W503,W504
 exclude = .venv,.git,.tox,dist,doc,etc,*glance_store/locale*,*lib/python*,*egg,build
 
 [testenv:lower-constraints]
