Cleanup py27 support
Make a few cleanups:
- Remove python 2.7 stanza from setup.py
- Add requires on python >= 3.6 to setup.cfg so that pypi and pip
  know about the requirement
- Remove obsolete sections from setup.cfg:
  * Wheel is not needed for python 3 only repo
- Update classifiers
- Update requirements, no need for python_version anymore

Change-Id: I12ecea6b3cfcca8edd5adedac91f906d77f4ff36

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,7 @@ description-file =
 author = OpenStack
 author-email = openstack-discuss@lists.openstack.org
 home-page = https://docs.openstack.org/glance_store/latest/
+python-requires = >=3.6
 classifier =
     Development Status :: 5 - Production/Stable
     Environment :: OpenStack
@@ -14,6 +15,8 @@ classifier =
     License :: OSI Approved :: Apache Software License
     Operating System :: POSIX :: Linux
     Programming Language :: Python
+    Programming Language :: Python :: Implementation :: CPython
+    Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
@@ -79,6 +82,3 @@ input_file = glance_store/locale/glance_store.pot
 keywords = _ gettext ngettext l_ lazy_gettext
 mapping_file = babel.cfg
 output_file = glance_store/locale/glance_store.pot
-
-[wheel]
-universal = 1
