Enforce constraints for docs dependencies
Tox targets for docs jobs were missing the upper constraints
enforcement. This adds constrained dependency installation for these
targets.

Change-Id: I187cfced08ec8dde561b947e797807dbbf723fe6
Signed-off-by: Sean McGinnis <sean.mcginnis@gmail.com>

--- a/tox.ini
+++ b/tox.ini
@@ -16,11 +16,15 @@ passenv = OS_TEST_*
 commands = stestr run --slowest {posargs}
 
 [testenv:docs]
-deps = -r{toxinidir}/doc/requirements.txt
+deps =
+   -c{env:UPPER_CONSTRAINTS_FILE:https://opendev.org/openstack/requirements/raw/branch/master/upper-constraints.txt}
+   -r{toxinidir}/doc/requirements.txt
 commands = sphinx-build -W -b html doc/source doc/build/html
 
 [testenv:releasenotes]
-deps = -r{toxinidir}/doc/requirements.txt
+deps =
+   -c{env:UPPER_CONSTRAINTS_FILE:https://opendev.org/openstack/requirements/raw/branch/master/upper-constraints.txt}
+   -r{toxinidir}/doc/requirements.txt
 commands = sphinx-build -a -E -W -d releasenotes/build/.doctrees -b html releasenotes/source releasenotes/build/html
 
 [testenv:pep8]
