[goal] Migrate glance_store jobs to focal
As per victoria cycle testing runtime and community goal[1]
we need to migrate upstream CI/CD to Ubuntu Focal(20.04).

Set bionic nodeset for py36 job and focal nodeset for rest all.

[1] https://governance.openstack.org/tc/goals/selected/victoria/migrate-ci-cd-jobs-to-ubuntu-fo$

Change-Id: Ide3cefdcf5e99f9593890a8f9bd4c8520af12d29
Story: #2007865
Task: #40185

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -51,6 +51,7 @@
     parent: tox
     abstract: true
     description: Abstract job for glance_store vs. cinder
+    nodeset: ubuntu-focal
     required-projects:
       - name: openstack/os-brick
       - name: openstack/python-cinderclient
@@ -60,6 +61,7 @@
     parent: glance_store-tox-cinder-tips-base
     description: |
       glance_store py36 unit tests vs. cinder masters
+    nodeset: ubuntu-bionic
     vars:
       tox_envlist: py36
 
@@ -68,6 +70,7 @@
     parent: tox
     abstract: true
     description: Abstract job for glance_store vs. keystone
+    nodeset: ubuntu-focal
     required-projects:
       - name: openstack/keystoneauth
       - name: openstack/python-keystoneclient
@@ -77,6 +80,7 @@
     parent: glance_store-tox-keystone-tips-base
     description: |
       glance_store py36 unit tests vs. keystone masters
+    nodeset: ubuntu-bionic
     vars:
       tox_envlist: py36
 
@@ -85,6 +89,7 @@
     parent: tox
     abstract: true
     description: Abstract job for glance_store vs. oslo
+    nodeset: ubuntu-focal
     required-projects:
       - name: openstack/oslo.concurrency
       - name: openstack/oslo.config
@@ -101,6 +106,7 @@
     parent: glance_store-tox-oslo-tips-base
     description: |
       glance_store py36 unit tests vs. oslo masters
+    nodeset: ubuntu-bionic
     vars:
       tox_envlist: py36
 
@@ -109,6 +115,7 @@
     parent: tox
     abstract: true
     description: Abstract job for glance_store vs. swift
+    nodeset: ubuntu-focal
     required-projects:
       - name: openstack/python-swiftclient
 
@@ -117,6 +124,7 @@
     parent: glance_store-tox-swift-tips-base
     description: |
       glance_store py36 unit tests vs. swift masters
+    nodeset: ubuntu-bionic
     vars:
       tox_envlist: py36
 
