--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -151,6 +151,18 @@
     vars:
       tox_envlist: py36
 
+- job:
+    name: glance_store-src-ceph-tempest
+    parent: devstack-plugin-ceph-tempest-py3
+    description: |
+      Runs tempest tests with the latest glance_store and the Ceph backend
+      Former names for this job were:
+      * legacy-tempest-dsvm-full-ceph-plugin-src-glance_store
+    required-projects:
+      - opendev.org/openstack/glance_store
+    vars:
+      tempest_test_regex: (^tempest\.(api|scenario)|(^cinder_tempest_plugin))
+
 - project:
     templates:
       - check-requirements
@@ -163,7 +175,7 @@
       - release-notes-jobs-python3
     check:
       jobs:
-        - legacy-tempest-dsvm-full-ceph-plugin-src-glance_store:
+        - glance_store-src-ceph-tempest:
             voting: false
             irrelevant-files: &tempest-irrelevant-files
               - ^doc/.*$
@@ -173,7 +185,6 @@
               - ^lower-constraints.txt$
               - ^setup.cfg$
               - ^tox.ini$
-              - ^\.zuul\.yaml$
     experimental:
       jobs:
         - glance_store-dsvm-functional-filesystem
