Copy data files to glance upon installation
At the moment if you need to configure cinder store of glance in your
environment then you need to mannualy copy rootwrap related files
from glance_store/etc/glance to /etc/glance folder.

Added those rootwrap.* related files as data_files in setup.cfg
which will copies those to /etc/glance on installation.

Change-Id: I9217f4a1379687241d23fe34deecd1f482cbb49c
Closes-Bug: #1890844

--- a/setup.cfg
+++ b/setup.cfg
@@ -25,6 +25,11 @@ classifier =
 [files]
 packages =
     glance_store
+data_files =
+    etc/glance =
+        etc/glance/rootwrap.conf
+    etc/glance/rootwrap.d =
+        etc/glance/rootwrap.d/glance_cinder_store.filters
 
 [entry_points]
 glance_store.drivers =
