--- a/tox.ini
+++ b/tox.ini
@@ -56,7 +56,7 @@ commands =
     stestr run --slowest --test-path=./glance_store/tests/functional/filesystem
 
 [doc8]
-ignore-path = .venv,.git,.tox,*glance_store/locale*,*lib/python*,glance_store.egg*,doc/build,*requirements.txt,lower-constraints.txt
+ignore-path = .venv,.git,.tox,*glance_store/locale*,*lib/python*,glance_store.egg*,doc/build,*requirements.txt
 
 [flake8]
 # TODO(dmllr): Analyze or fix the warnings blacklisted below
@@ -68,8 +68,3 @@ ignore-path = .venv,.git,.tox,*glance_store/locale*,*lib/python*,glance_store.eg
 ignore = H301,H404,H405,W503,W504
 exclude = .venv,.git,.tox,dist,doc,etc,*glance_store/locale*,*lib/python*,*egg,build
 
-[testenv:lower-constraints]
-deps =
-  -c{toxinidir}/lower-constraints.txt
-  -r{toxinidir}/test-requirements.txt
-  .[s3,vmware,swift,cinder]
