Swift: Honor *_domain_name parameters
The *_domain_id parmaeters should not have any default. Otherwise
keystoneauth ignores the *_domain_name parameters and it requires
only *_domain_id parameters are used.

Conflicts:
	glance_store/_drivers/swift/utils.py

Closes-Bug: #1620999
Change-Id: I1f8c9184761313f9fc5fda2f257e52233e0196d1
(cherry picked from commit 6738d0b156fc1caae0604eb7bd8f05a6ed1c2d68)

--- a/glance_store/tests/etc/glance-swift.conf
+++ b/glance_store/tests/etc/glance-swift.conf
@@ -16,6 +16,22 @@ user = "user3"
 key = "key3"
 auth_address = "http://example.com"
 
+[ref4]
+user = user4
+key = key4
+user_domain_id = userdomainid
+project_domain_id = projdomainid
+auth_version = 3
+auth_address = "http://example.com"
+
+[ref5]
+user = user5
+key = key5
+user_domain_name = userdomain
+project_domain_name = projdomain
+auth_version = 3
+auth_address = "http://example.com"
+
 [store_2]
 user = tenant:user1
 key = key1
