--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -130,6 +130,7 @@
       * legacy-tempest-dsvm-full-ceph-plugin-src-glance_store
     required-projects:
       - opendev.org/openstack/glance_store
+    timeout: 9000
     vars:
       tempest_test_regex: (^tempest\.(api|scenario)|(^cinder_tempest_plugin))
 
@@ -156,7 +157,6 @@
       jobs:
         - cross-glance-tox-functional
         - glance_store-src-ceph-tempest:
-            voting: false
             irrelevant-files: &tempest-irrelevant-files
               - ^doc/.*$
               - ^releasenotes/.*$
