--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -130,6 +130,7 @@
       * legacy-tempest-dsvm-full-ceph-plugin-src-glance_store
     required-projects:
       - opendev.org/openstack/glance_store
+    timeout: 10800
     vars:
       tempest_test_regex: (^tempest\.(api|scenario)|(^cinder_tempest_plugin))
 
