Run ceph-tempest job specifically for RBD
Previously, the glance_store-src-ceph-tempest job executed across
all backends, which was unnecessary. I have now disabled it for
backends other than RBD, so it will now run exclusively for changes
related to the RBD backend.

Additionally, it has been configured to not run when changes are made
in unit or functional tests.

Change-Id: I340fbaf3d9eb8802e70cf84242bda5dc7da90677

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -153,13 +153,20 @@
       jobs:
         - cross-glance-tox-functional
         - glance_store-src-ceph-tempest:
-            irrelevant-files: &tempest-irrelevant-files
+            irrelevant-files:
               - ^doc/.*$
               - ^releasenotes/.*$
               - ^.*\.rst$
               - ^(test-|)requirements.txt$
               - ^setup.cfg$
               - ^tox.ini$
+              - ^glance_store/_drivers/cinder/.*$
+              - ^glance_store/_drivers/swift/.*$
+              - ^glance_store/_drivers/filesystem*$
+              - ^glance_store/_drivers/http.*$
+              - ^glance_store/_drivers/s3.*$
+              - ^glance_store/tests/.*$
+
     experimental:
       jobs:
         - glance_store-dsvm-functional-filesystem
