Skip cross-glance-tox-functional for irrelevant files
Some files such as documentation files do not affect compatibility with
glance, so we can skip the cross functional test.

Change-Id: Ib45836f8afd5c8de081ef6c3c9baa82b59f81a64
Signed-off-by: Takashi Kajinami <kajinamit@oss.nttdata.com>

--- a/.zuul.yaml
+++ b/.zuul.yaml
@@ -141,6 +141,16 @@
     required-projects:
       - openstack/glance
       - openstack/glance_store
+    irrelevant-files:
+      - ^LICENSE$
+      - ^.*\.rst$
+      - ^test-requirements.txt$
+      - ^glance_store/locale/.*$
+      - ^glance_store/tests/.*$
+      - ^doc/.*$
+      - ^releasenotes/.*$
+      - ^tools/.*$
+      - ^tox.ini/.*$
 
 - project:
     templates:
